--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.desarrollopersonal">
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
     <application
         android:allowBackup="true"
@@ -9,7 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.DesarrolloPersonal">
-        <activity android:name=".Unidad3"></activity>
+        <activity android:name=".Lectura"></activity>
+        <activity android:name=".Tecnicas" />
+        <activity android:name=".Unidad3" />
         <activity android:name=".Unidad2" />
         <activity android:name=".Unidad1" />
         <activity android:name=".Contacto" />
